syntax = "proto3";

package appliancepb;

import "google/protobuf/timestamp.proto";

service Appliance {
  rpc GetCurrentTemperature (GetCurrentTemperatureRequest) returns (GetCurrentTemperatureResponse) {}
  rpc GetTargetTemperature (GetTargetTemperatureRequest) returns (GetTargetTemperatureResponse) {}
  rpc SetTargetTemperature (SetTargetTemperatureRequest) returns (SetTargetTemperatureResponse) {}
}

message TemperatureSample {
    float value = 1;
    google.protobuf.Timestamp observed_at = 2;
}

message GetCurrentTemperatureRequest {}
message GetCurrentTemperatureResponse {
    TemperatureSample sample = 1;
}

message GetTargetTemperatureRequest {}
message GetTargetTemperatureResponse {
    float temperature = 1;
    google.protobuf.Timestamp set_at = 2;
}

message SetTargetTemperatureRequest {
    float temperature = 1;
}
message SetTargetTemperatureResponse {
    float temperature = 1;
    google.protobuf.Timestamp set_at = 2;
}
